# hacklily

./: .cta.json  .eslintrc.cjs  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .mailmap  .npmrc  .oxfmtrc.json  .oxlintrc.json  .travis.yml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  Makefile  README.md  babel.config.cjs  babel.config.js  components.json  eslint.config.js  flake.nix  index.html  ipa.html  jest.config.cjs  jest.config.js  jest.setup.cjs  journal.html  justfile  musicxml2ly.html  package-lock.json  package.json  playground.html  practice.html  privacy.html  secrets.tar.gz.enc  status.html  tsconfig.json  tslint.json  vite.config.ts  (+2 more)
.devcontainer/: Dockerfile  devcontainer.json
config/: env.js  paths.js  webpack.config.dev.js  webpack.config.prod.js  webpackDevServer.config.js
docs/: align-bench-plan.md  analytics.md  brightness-fixes.md  journal.md  memory-improvements.md  partial-align-plan.md  practice-plan.md
lilypond-wasm/: .gitignore  GUILE-WASM-SPIKE.md  README.md  bootstrap.sh  browser-test.js  build-deps.sh  build-guile-wasm.sh  build-lily-deps.sh  crash-test.js  cross-bytecode.ly  eval-test.c  fs-trace.js  guile-env-pre.js  lily-api-test.c  lily-browser-pre.js  lily-browser.html  lily-crash.html  lily-warm.html  lily-worker.js  package.json  pango-smoke.c  regression-cairo-svg.py  run-scheme.c
makelily/: .eslintrc.js  .gitignore  .gitmodules  .travis.yml  .travis_rsa.enc  BANNER.txt  LICENSE.TXT  LICENSE.md  Makefile  README.md  (+14 more)
server/renderer-server/: Cargo.toml
server/renderer-server/deploy/: README.md  env.example  hacklily-renderer.service  install.sh  update.sh
server/renderer-server/deploy/nginx/: render.hacklily.org.conf  render.hacklily.org.http-only.conf
server/renderer-server/src/: auth.rs  config.rs  container.rs  error.rs  http_status.rs  jsonrpc.rs  lib.rs  main.rs  renderer.rs  renderer_manager.rs  request.rs  status.rs  worker_registry.rs
server/renderer-server/src/command_source/: batch.rs  coordinator.rs  mod.rs  test_runner.rs  ws_worker_client.rs
server/renderer-server/src/event_loop/: mod.rs  state.rs
server/renderer-server/tests/: coordinator_ws.rs  evil.rs  pdf_midi.rs  sigterm.rs  simple.rs  sleep.rs  util.rs
server/renderer-server/tests/ly/: danger_forever.ly  danger_forkbomb.ly  danger_kill_group.ly  danger_kill_lilypond.ly  danger_kill_ruby.ly  danger_rm_home.ly  danger_rm_slash.ly  danger_rm_tmp.ly  simple.ly  simple.ly.2_18_2.txt  simple.ly.2_19_82.txt  simple.ly.2_26_0.txt  simple.ly.2_27_1.txt  simple_midi.ly  sleep.ly  sleep.ly.2_18_2.txt  sleep.ly.2_19_82.txt  sleep.ly.2_26_0.txt  sleep.ly.2_27_1.txt
(+2218 files in other folders)
