[package]
name = "renderer_server"
version = "0.1.0"
authors = ["Jocelyn Stericker <jocelyn@nettek.ca>"]
edition = "2018"

[lib]
name = "renderer_lib"
path = "src/lib.rs"

[[bin]]
name = "renderer_server"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12"
clap = "2.33.0"
env_logger = "0.7.1"
futures = "0.3.4"
libc = "0.2.64"
log = "0.4.8"
nix = "0.20.2"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
rand = "0.7.3"
tokio = {version = "0.2.13", features = ["stream", "time", "io-util", "process", "fs", "sync", "rt-core", "signal", "rt-threaded", "macros"]}
tokio-tungstenite = {version = "0.10.1", features = ["tls"]}
tokio-tls = "0.3.0"
url = "2.1.1"
url_serde = "0.2.0"
uuid = {version = "0.8.1", features = ["serde", "v4"]}
