[package]
name = "renderer_server"
version = "0.1.0"
authors = ["Jocelyn Stericker <jocelyn@nettek.ca>"]
edition = "2021"

[lib]
name = "renderer_lib"
path = "src/lib.rs"

[[bin]]
name = "renderer_server"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12"
clap = "3.2.17"
env_logger = "0.9.0"
futures = "0.3.23"
libc = "0.2.132"
log = "0.4.17"
nix = "0.25.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_derive = "1.0.104"
serde_json = "1.0.83"
rand = "0.8.5"
tokio = {version = "1.20.4", features = ["time", "io-util", "process", "fs", "sync", "signal", "macros", "rt", "rt-multi-thread"]}
tokio-stream = {version = "0.1.9", features = ["io-util"]}
tokio-tungstenite = {version = "0.17.2", features = ["rustls-tls-native-roots"]}
tokio-tls = "0.3.1"
url = "2.2.2"
url_serde = "0.2.0"
uuid = {version = "1.1.2", features = ["serde", "v4"]}
